<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="pl.michalregulski.taskmanager.utils.databinding.TaskTypeConverter" />

        <import type="pl.michalregulski.taskmanager.utils.databinding.ZonedDateTimeConverter" />

        <variable
            name="viewModel"
            type="pl.michalregulski.taskmanager.viewmodel.AddEditTaskViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addEditTaskCL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.AddEditTaskActivity"
        tools:showIn="@layout/activity_add_edit_task">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleTIL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titleET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/title_title"
                android:inputType="text|textCapSentences|textAutoCorrect"
                android:text="@={viewModel.task.title}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionTIL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleTIL">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/title_description"
                android:inputType="text|textCapSentences|textAutoCorrect"
                android:text="@={viewModel.task.description}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dueDateTIL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionTIL">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dueDateET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:cursorVisible="false"
                android:hint="@string/title_due_date"
                android:inputType="none"
                android:text="@={ZonedDateTimeConverter.fromZonedDateTime(viewModel.task.dueDate)}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/taskTypeTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dueDateTIL">

            <AutoCompleteTextView
                android:id="@+id/taskTypeET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:hint="@string/title_task_type"
                android:inputType="none"
                android:text="@={TaskTypeConverter.fromTaskType(context, viewModel.task.type)}" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
